# picsorter

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: test-pipeline.yml
picsorter/: __init__.py  core.py
tests/: test_core.py
