[tool.poetry]
name = "picsorter"
version = "0.1.0"
description = "Rename picture files to their creation dates."
authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 79
target-version = "py311"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
